tests/e2e/semantics/mutation/arg_required.error
Error: syntax error in story at line 1, column 5

1|    a = [1, 2] contains
          ^

E0113: Mutation `contains` requires argument `item`
