tests/e2e/semantics/mutation/arg_required.story
a = [1, 2] contains
a = "foo"
